--- a/目录.md
+++ b/目录.md
@@ -2,14 +2,13 @@
 资料检索：
 [显密文库](http://read.goodweb.net.cn/)
 
-佛教史：
-[[中国佛学源流略讲_吕澄.pdf]]
+[[中国佛学源流略讲.pdf]]
 
 
 # 早期中观思想
 ## 般若经八千颂
-[[01_大般若经600卷_升级版.pdf]]
-[[小品般若波罗蜜经_八千颂_鸠摩罗什.pdf]]
+
+
 
 参考：
 [[略谈《八千颂般若经》历代含译本的特点.pdf]]
