--- a/目录.md
+++ b/目录.md
@@ -21,35 +21,36 @@
 [[龙树六论 正理聚及其注释.pdf]]
 
 ### 《中论颂》-
-[[中论颂  梵藏汉合校·导读·译注（叶少勇）.pdf]]
-[[中论颂(配正理海)梵藏汉对照-（1-27品）P140.pdf]]
-[[10入中论颂_法尊（有注释）.pdf]]
+[[中论颂梵藏汉合叶少勇.pdf]]
+[[中论颂配正理海梵藏汉对照1-27品.pdf]]
+
 
 参考：
-[[中观论颂讲记_印顺法师.pdf]]
+[[中观论颂讲记印顺法师.pdf]]
+[[入中论颂讲记演培法师.pdf]]
 
 
 ### 《六十如理颂》
 [[六十如理颂  梵藏汉合校·导读·译注（叶少勇）.pdf]]
 
 ### 《回诤论》
-[[回诤论_瞿昙流支.pdf]]
+[[回诤论瞿昙流支.pdf]]
 
 ##  提婆（公元170-270）
 ### 《四百论》
-[[中观四百论.pdf]]、[[四百论(玄奘法师、法尊法师译).pdf]]
+[[中观四百论.pdf]]、[[四百论玄奘法师法尊法师译.pdf]]
 
 ##  罗睺罗跋陀罗（公元200-300）
 ##  青目（公元320-400）
 ### 《中论释》
-[[中论颂_青目释.pdf]]-法尊译-
+[[中论颂青目释.pdf]]-法尊译-
 
 ##  佚名
 ### 《无畏疏》
 [[无畏疏.pdf]]-日本
 ##  佛护（公元470-500）
 ### 《中论佛护释》-
-[[佛护论_蒋杨仁钦.pdf]]
+[[佛护论蒋杨仁钦.pdf]]
 
 ##  弥勒（公元350-430）
 ### 《瑜伽师地论》
@@ -138,7 +139,7 @@
 ### 《入中论》
 
 ### 《明句论》
-[[中观论根本颂之诠释显句论（明句论）.pdf]]
+[[明句论.pdf]]
 
 参考：
 [[梵本《中论颂．月称注》(净明句论)研究序论.pdf]]
