更新 参考资料-目录.md

--- a/参考资料-目录.md
+++ b/参考资料-目录.md
@@ -6,10 +6,6 @@
 [[中国佛学源流略讲.pdf]]
 [[龙树的空观（叶少勇）.pdf]]
 
-嵌入引用范例：
-![[龙树的空观（叶少勇）.pdf#page=100]]
-
-
 # 早期中观思想
 ## 般若经八千颂
 
@@ -22,8 +18,10 @@
 [《十地经》简介](http://blog.sina.com.cn/s/blog_152d597e201030p6x.html)
 
 ## 龙树（公元150-250）
-### 龙树六论-总集
+### 龙树六论
 [[龙树六论 正理聚及其注释.pdf]]
+[[精研论.pdf]]
+[[七十空性论.pdf]]
 
 ### 《中论颂》-
 [[中论颂梵藏汉合叶少勇.pdf]]
