--- a/正理海/《正理海》读书笔记.md
+++ b/正理海/《正理海》读书笔记.md
@@ -164,6 +164,29 @@
 我的理解：可以
 但前提是，必须有圣根本智证得空性的经验，然后才能以名言分别识将这个经验的结果，即空性安立为法，否则名言分别识所观察的那个空性，就如同龟毛、兔角一般，只是一个抽象臆造的概念。
 
+---
+皈敬颂
+
+《青目释》鸠摩罗什译
+> 诸法不自生，亦不从他生，不共不无因，是故知无生
+
+《佛护论》-蒋扬仁钦译
+>非自非从他，非共非无因，事物何时处，其生终非有。
+
+《中论颂梵藏汉合译》-叶少勇译
+>从自生或从他生，从两者或无因生，所生事物皆无有，无论何者于何处。
+
+《中论颂》法尊译
+非自非从他，非共非无因，诸法随于何，其生终非有。
+
+遮法：，心直接遮止自己的所遮品而了解的法，就叫做
+遮法。
+
+
+
+
+
+
 
 
   
