--- a/正理海/《正理海》读书笔记.md
+++ b/正理海/《正理海》读书笔记.md
@@ -124,20 +124,38 @@
 
 执空性为实有，也是无明，但执空性为实有的时候，必须是以名言分别识来观待，所以这个时候被名言分别识所观待的“空性”，是世俗谛。
 
-定义：
-1、所缘境：是圣根本智或名言分别识，所观察的对象；
+一、概念定义：
+1、所缘境（心所）：是圣根本智或名言分别识，所观察的对象；
 2、自性：自性的含义是不依赖于其他，即从所缘境上可找到它的自体，这个自体与“自相”同义，也是与“人我执”和“法我执”中的那个“我”是同义；
-3、圣根本智：是观察自性有无的理智，是非分别名言安立的理智（在此意义上说圣根本智是“无分别智”或“无分别识”，不是什么也不想的无分别，那是“支那和尚”的说法-请查阅支那和尚或支那堪布的典故）；
-4、名言分别识：是观察所缘境并进行分别后，用名言安立的理智；
-5、世俗谛：是名言分别识通过眼耳鼻舌身意（六识）观察五蕴（一切法）并进行分别后，用名言安立的那个境，是名言有，是有；
+3、圣根本智：是观察自性有无的理智（心），是非分别名言安立的理智（在此意义上说圣根本智是“无分别智”或“无分别识”，不是什么也不想的无分别，那是“支那和尚”的说法-请查阅支那和尚或支那堪布的典故）；
+4、名言分别识：是观察所缘境并进行分别后，用名言安立的理智（心）；
+5、世俗：是名言分别识通过眼耳鼻舌身意（六识）观察五蕴（一切法）并进行分别后，用名言安立的那个境，是名言有，是有；
 世俗谛包括人和法，人是泛指补特伽罗（有情众生），法是指除了补特伽罗（有情众生）以外的一切事物；
-6、胜义谛：是圣根本智观察世俗谛即人和法的自性有无，所得到的那个境，这个境表现为自性无或自性空，即空性；
-7、无明：是以为在所缘境上确实可以找到其自体，即执着自性有，是对实有自性的执着；无明包括法我执和人我执。
-8、法我执，是缘除了特伽罗（有情众生）之外的，执其为自性有（自相有）的执着。
-9、人我执，是缘补特伽罗（有情众生），执其为自性有（自相有）的执着。
-10、萨迦耶见，是缘自己而执为自性有（自相有）的这种执着。
+6、世俗谛：是名言分别识对名言安立的境执为自性实有的那个境，世俗谛是胜义所破，在圣根本智观察下找不到。
+注：这个解释有些出入，有传承说世俗谛不是所破，也不是无明，而只是世俗的名言安立，所以胜义谛不破世俗谛，如同眼睛不破声音。
+但我将世俗和世俗谛分开来解释，谛是真实存在的意思，世俗是唯名言的安立，但世俗谛则是在此安立上增益其实有自性，所以世俗谛就是所破亦是无明。
+7、胜义谛：是圣根本智观察世俗所安立的境，即人和法上的自性有无，所得到的那个境，这个境表现为自性无或自性空，即空性；
+8、无明：是以为在所缘境上确实可以找到其自体，即执着自性有，是对实有自性的执着；无明包括法我执和人我执。
+9、法我执，是缘除了特伽罗（有情众生）之外的，执其为自性有（自相有）的执着。
+10、人我执，是缘补特伽罗（有情众生），执其为自性有（自相有）的执着。
+11、萨迦耶见，是缘自己而执为自性有（自相有）的这种执着。
 萨迦耶见所缘的那个“自己”，也是“我”，但是是名言有的我，不是自性，否则就成了缘自性而执有自性，自性必须是建立在人和法上，否则那到底是谁的自性呢？
 萨迦耶见属于人我执，但人我执不一定是萨迦耶见，例如执着其他人为自性有（自相有）也是人我执，但不是萨迦耶见。
+
+二、需要解释的几点：
+1、名言分别识可以观察所有的对境，但都会纳入到名言有的分别安立之中。
+名言分别识在观察空性的时候，也会将空性纳入到世俗名言中安立，所以在名言分别识的安立中，空性也是有，是名言有但不是谛实有。
+同样名言分别识也可以观察自性，但同样也会将其纳入到世俗名言中安立，所以在名言分别识的安立中，自性是有，是名言有，且因为执其有自性，所以也是谛实有。
+2、圣根本智只能观察世俗有的安立，同时遮破了自性的存在，所以圣根本智观察不到自性有的同时，证得了空性。
+圣根本智观察不到自性，有上师譬喻说这就如同眼睛听不到声音，不代表声音没有。
+这个譬喻我不同意，因为自性就是没有。在名言分别识的安立中，如果有无明，才会误以为有，否则也是没有的，只是在概念上进行安立而已。
+3、如何安立世俗因果呢？这里的世俗因果不再是谛实的此有故彼有，此生故彼生，而是相待的——有此安立，即能有彼安立，有此生灭的安立，即能有彼生灭的安立。这里的世俗因果唯是名言安立而已。
+
+
+
+
+
+
 
 需要讨论的几个问题：
 1、圣根本智是否只能观察世俗谛？（存疑）
